force-app/main/default/objects/SAI_Application_Asset_Feature__c/SAI_Application_Asset_Feature__c.object-meta.xml
<CustomObject>
    <label>SAI Application Asset Feature</label>
    <nameField>
        <displayFormat>AAF-{0000000}</displayFormat>
        <label>SAI Application Asset Feature Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAI Application Asset Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>