force-app/main/default/objects/SAI_Application_Asset_Feature__c/fields/Application_Asset_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Asset_Number__c</fullName>
    <label>Application Asset Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>