force-app/main/default/objects/SAI_Application_Asset_Feature__c/fields/Value_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Value_Date_Time__c</fullName>
    <label>Value Date Time</label>
    <type>DateTime</type>
</CustomField>