force-app/main/default/objects/SAI_Application_Asset_Feature__c/fields/Value_Numerice__c.field-meta.xml
<CustomField>
    <fullName>Value_Numerice__c</fullName>
    <label>Value Numerice</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>